add txt test file for each book
-- show text file content onClick read button
-- seperate text page on byte defined, will changed to based on screen size if have time
-- need to add scrollview for each page (not finished)

--- a/res/layout/article.xml
+++ b/res/layout/article.xml
@@ -1,17 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    
     <TextView
         android:id="@+id/article"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="20sp"
-        android:text="this is the book article! here used to test the frame work fit or not"
-        android:padding="10dp"
-        >
-    </TextView>
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="5dp" />
+    
+    <Button
+        android:id="@+id/next_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="20dp"
+        android:text="Next" />
+    
+    <Button
+        android:id="@+id/last_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="20dp"
+        android:text="Last" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/total_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/last_page"
+        android:paddingTop="15dp"
+        android:layout_centerHorizontal="true"
+        android:text="page Num" />
+
+</RelativeLayout>
