--- a/res/layout/bookdetails_vertical.xml
+++ b/res/layout/bookdetails_vertical.xml
@@ -8,8 +8,8 @@
     
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="200dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="18dp"
