--- a/res/layout/article.xml
+++ b/res/layout/article.xml
@@ -4,16 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    
     <TextView
         android:id="@+id/article"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="20sp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:paddingTop="5dp" />
-    
+        android:paddingTop="5dp"
+        android:textSize="20sp" />
+
     <Button
         android:id="@+id/next_page"
         android:layout_width="wrap_content"
@@ -23,7 +22,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginRight="20dp"
         android:text="Next" />
-    
+
     <Button
         android:id="@+id/last_page"
         android:layout_width="wrap_content"
@@ -39,8 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/last_page"
-        android:paddingTop="15dp"
         android:layout_centerHorizontal="true"
+        android:paddingTop="15dp"
         android:text="page Num" />
 
 </RelativeLayout>
