--- a/res/layout/epub_viewer_bookmark_row.xml
+++ b/res/layout/epub_viewer_bookmark_row.xml
@@ -3,28 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
+
     <TextView
         android:id="@+id/bookmark_row_label"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
-        android:scrollHorizontally="true"
-        android:ellipsize="end" />
+        android:ellipsize="end"
+        android:scrollHorizontally="true" />
+
     <TextView
         android:id="@+id/bookmark_row_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:gravity="right" />
+
     <Button
         android:id="@+id/bookmark_row_edit_button"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:onClick="onEditButtonClick"
         android:focusable="false"
+        android:onClick="onEditButtonClick"
         android:text="@string/epub_viewer_bookmark_row_edit_text" />
 
 </LinearLayout>
