--- a/res/layout/book_list_item.xml
+++ b/res/layout/book_list_item.xml
@@ -9,7 +9,8 @@
         android:id="@+id/bookCover"
         android:layout_width="100dp"
         android:layout_height="130dp"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:contentDescription="@string/bookcover" />
 
     <TextView
         android:id="@+id/bookName"
