--- a/res/menu/options_menu.xml
+++ b/res/menu/options_menu.xml
@@ -4,6 +4,11 @@
     <item
         android:id="@+id/menu_add"
         android:icon="@android:drawable/ic_menu_add"
-        android:showAsAction="always"/>
+        android:showAsAction="always" />
+    
+    <item
+        android:id="@+id/clear_cache"
+        android:icon="@android:drawable/ic_menu_add"
+        android:showAsAction="always" />
 
 </menu>
