delete button read and omf xml dialog. add button omf, xml which can directly approach the article.

--- a/res/layout/details.xml
+++ b/res/layout/details.xml
@@ -41,15 +41,23 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/book_fragment_horizontal_name"
         android:layout_below="@id/book_fragment_horizontal_publisher" />
-
+    
     <Button
-        android:id="@+id/book_fragment_horizontal_btn_read"
-        style="?android:attr/buttonStyleSmall"
+        android:id="@+id/btn_fxl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/book_fragment_horizontal_ptime"
+        android:layout_alignLeft="@id/book_fragment_horizontal_name"
         android:layout_below="@id/book_fragment_horizontal_ptime"
-        android:layout_marginTop="20dp"
-        android:text="@string/read" />
+        android:layout_marginTop="10dp"
+        android:text="@string/fxl" />
+    
+    <Button
+        android:id="@+id/btn_omf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/btn_fxl"
+        android:layout_below="@id/book_fragment_horizontal_ptime"
+        android:layout_marginTop="10dp"
+        android:text="@string/omf" />
 
 </RelativeLayout>
